fixed alignment of popup options and warnings

--- a/src/index.css
+++ b/src/index.css
@@ -40,10 +40,10 @@ body {
 
 .floating-top-right {
   position: absolute;
-  top:105%;
+  top:115%;
   max-height: 100px;
-  right: 0px;
-  width:100%;
+  left: 0px;
+  width: max(97.15%, 150px);
   border-bottom-right-radius: 3px;
   border-bottom-left-radius: 3px;
   border: 1px solid black;
@@ -82,8 +82,7 @@ body {
 }
 
 .warning-text {
-  margin-top: 20px;
-  margin-bottom: 0px;
+  margin: 20px 2px 0px 2px;
   padding-bottom: 0px;
   font-style: italic;
   color: red;
